--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -83,6 +83,7 @@
       color: #7f7f7f;
       font-size: 20px;
       line-height: 20px;
+      cursor: pointer;
     }
 
     .bottom-text {
@@ -99,7 +100,7 @@
       line-height: 26px;
       color: $main-color;
       text-transform: uppercase;
-      font-weight: 700;
+      //font-weight: 700;
       margin-bottom: 20px;
       padding-right: 25px;
     }
@@ -111,6 +112,24 @@
       line-height: 23px;
       font-weight: 300;
       margin-bottom: 23px;
+
+      &.prospectus-text {
+        margin: 0 0 5px 0;
+        font-size: 16px;
+        line-height: 20px;
+        color: $dark-color;
+        
+        a {
+          color: $main-color;
+        }
+      }
+
+      &.prospectus-text-sm {
+        font-size: 13px;
+        line-height: 17px;
+        color: $dark-color;
+        margin: 0;
+      }
 
       &.red-color {
         color: #f33;
@@ -170,6 +189,23 @@
           background-color: #ffffe1;
         }
       }
+    }
+  }
+}
+
+.prospectus-buttons {
+  margin-top: 20px;
+  text-align: center;
+
+  a {
+    background-color: $main-color;
+    border-color: $main-color;
+    color: #fff;
+    margin-bottom: 15px;
+
+    &:hover {
+      background-color: $dark-color;
+      border-color: $dark-color;
     }
   }
 }
@@ -244,7 +280,7 @@
   input {
     display: block;
     min-width: 90px;
-    height: 30px;
+    height: 44px;
     border-radius: 30px;
     background-color: $main-color;
     color: #fff;
