--- a/css/offer.css
+++ b/css/offer.css
@@ -795,7 +795,8 @@ input[type=number]::-webkit-outer-spin-button {
       right: 20px;
       color: #7f7f7f;
       font-size: 20px;
-      line-height: 20px; }
+      line-height: 20px;
+      cursor: pointer; }
     .invest-modal-dialog .modal-content .bottom-text {
       font-size: 11px;
       line-height: 16px;
@@ -808,7 +809,6 @@ input[type=number]::-webkit-outer-spin-button {
       line-height: 26px;
       color: #00b3b7;
       text-transform: uppercase;
-      font-weight: 700;
       margin-bottom: 20px;
       padding-right: 25px; }
     .invest-modal-dialog .modal-content em {
@@ -818,6 +818,18 @@ input[type=number]::-webkit-outer-spin-button {
       line-height: 23px;
       font-weight: 300;
       margin-bottom: 23px; }
+      .invest-modal-dialog .modal-content em.prospectus-text {
+        margin: 0 0 5px 0;
+        font-size: 16px;
+        line-height: 20px;
+        color: #203140; }
+        .invest-modal-dialog .modal-content em.prospectus-text a {
+          color: #00b3b7; }
+      .invest-modal-dialog .modal-content em.prospectus-text-sm {
+        font-size: 13px;
+        line-height: 17px;
+        color: #203140;
+        margin: 0; }
       .invest-modal-dialog .modal-content em.red-color {
         color: #f33; }
     .invest-modal-dialog .modal-content .invest-form-row {
@@ -856,6 +868,18 @@ input[type=number]::-webkit-outer-spin-button {
       .invest-modal-dialog .modal-content .invest-form-row .input-wrap input {
         padding-left: 30px;
         background-color: #ffffe1; }
+
+.prospectus-buttons {
+  margin-top: 20px;
+  text-align: center; }
+  .prospectus-buttons a {
+    background-color: #00b3b7;
+    border-color: #00b3b7;
+    color: #fff;
+    margin-bottom: 15px; }
+    .prospectus-buttons a:hover {
+      background-color: #203140;
+      border-color: #203140; }
 
 .input-wrap {
   position: relative; }
@@ -913,7 +937,7 @@ input[type=number]::-webkit-outer-spin-button {
   .input-submit input {
     display: block;
     min-width: 90px;
-    height: 30px;
+    height: 44px;
     border-radius: 30px;
     background-color: #00b3b7;
     color: #fff;
@@ -1085,7 +1109,7 @@ input[type=number]::-webkit-outer-spin-button {
         line-height: 22px;
         color: #fff;
         text-transform: uppercase; }
-  .offer-upcoming .offer-closes-wrapper .offer-buttons a {
+  .offer-upcoming .offer-closes-wrapper .offer-buttons span {
     display: inline-block;
     vertical-align: middle;
     margin-right: 25px;
@@ -1095,21 +1119,22 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 14px;
     line-height: 16px;
     font-weight: 600;
+    cursor: pointer;
     text-decoration: none;
     border: 1px solid transparent;
     outline: none;
     transition: all .2s linear; }
-    .offer-upcoming .offer-closes-wrapper .offer-buttons a:hover {
+    .offer-upcoming .offer-closes-wrapper .offer-buttons span:hover {
       color: #fff !important;
       border: 1px solid #fff;
       background-color: transparent !important; }
-    .offer-upcoming .offer-closes-wrapper .offer-buttons a.bid-now {
+    .offer-upcoming .offer-closes-wrapper .offer-buttons span.bid-now {
       background-color: #fff;
       color: #203140; }
-    .offer-upcoming .offer-closes-wrapper .offer-buttons a.closing-soon {
+    .offer-upcoming .offer-closes-wrapper .offer-buttons span.closing-soon {
       background-color: #d45155;
       color: #fff; }
-    .offer-upcoming .offer-closes-wrapper .offer-buttons a:last-child {
+    .offer-upcoming .offer-closes-wrapper .offer-buttons span:last-child {
       margin-right: 0; }
 
 .offer-prospectus {
@@ -1170,6 +1195,7 @@ input[type=number]::-webkit-outer-spin-button {
       padding: 0;
       font-size: 24px;
       line-height: 26px;
+      cursor: pointer;
       color: #00b3b7;
       margin-bottom: 30px; }
     .key-points-overview-section .offer-sidebar .prospectus-wrapper .offer-span {
@@ -1386,8 +1412,12 @@ input[type=number]::-webkit-outer-spin-button {
     display: inline-block;
     font-size: 18px;
     line-height: 20px;
+    cursor: pointer;
+    font-style: normal;
     color: #00b3b7;
     outline: none; }
+    .management-info-wrapper .management-info .read-more:hover {
+      text-decoration: underline; }
 
 .news-section {
   padding: 150px 0;
