--- a/scss/offer.scss
+++ b/scss/offer.scss
@@ -163,7 +163,7 @@
     }
 
     .offer-buttons {
-      a {
+      span {
         display: inline-block;
         vertical-align: middle;
         margin-right: 25px;
@@ -173,6 +173,7 @@
         font-size: 14px;
         line-height: 16px;
         font-weight: 600;
+        cursor: pointer;
         text-decoration: none;
         border: 1px solid transparent;
         outline: none;
@@ -280,6 +281,7 @@
         padding: 0;
         font-size: 24px;
         line-height: 26px;
+        cursor: pointer;
         //font-weight: 700;
         color: $main-color;
         margin-bottom: 30px;
@@ -594,9 +596,15 @@
       display: inline-block;
       font-size: 18px;
       line-height: 20px;
+      cursor: pointer;
+      font-style: normal;
       //font-weight: 700;
       color: $main-color;
       outline: none;
+      
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
