Changed logo to svg

--- a/scss/_dashboard-sidebar.scss
+++ b/scss/_dashboard-sidebar.scss
@@ -139,6 +139,7 @@
 
       .logo-lg {
         display: block;
+        width: 175px;
 
         @media (max-width: $screen-sm-min) {
           width: 87px;
