--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -447,7 +447,8 @@ input[type=number]::-webkit-outer-spin-button {
   text-decoration: none; }
   .logo a img {
     display: block;
-    margin-bottom: 8px; }
+    margin-bottom: 8px;
+    width: 175px; }
   .logo a span {
     display: block;
     font-size: 12px;
@@ -720,7 +721,8 @@ input[type=number]::-webkit-outer-spin-button {
       .dashboard-sidebar .heading a img {
         transition: all .5s ease-in-out; }
       .dashboard-sidebar .heading a .logo-lg {
-        display: block; }
+        display: block;
+        width: 175px; }
         @media (max-width: 576px) {
           .dashboard-sidebar .heading a .logo-lg {
             width: 87px; } }
