--- a/css/login.css
+++ b/css/login.css
@@ -447,7 +447,8 @@ input[type=number]::-webkit-outer-spin-button {
   text-decoration: none; }
   .logo a img {
     display: block;
-    margin-bottom: 8px; }
+    margin-bottom: 8px;
+    width: 175px; }
   .logo a span {
     display: block;
     font-size: 12px;
