--- a/scss/_dashboard-sidebar.scss
+++ b/scss/_dashboard-sidebar.scss
@@ -166,6 +166,7 @@
 
           @media (max-width: $screen-sm-min) {
             line-height: 22px;
+            font-size: 28px;
           }
         }
       }
