--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -521,12 +521,45 @@
   }
 }
 
+.back-button {
+  display: inline-block;
+  font-size: 30px;
+  line-height: 32px;
+  color: $main-color;
+  text-transform: uppercase;
+  @include transition;
+
+  @media (max-width: $screen-sm-min) {
+    font-size: 15px;
+    line-height: 17px;
+  }
+
+  &:hover {
+    text-decoration: none;
+    color: $dark-color;
+
+    i {
+      color: $main-color;
+    }
+  }
+  
+  i {
+    display: inline-block;
+    vertical-align: middle;
+    color: $dark-color;
+    font-size: 24px;
+    line-height: 25px;
+    margin-top: -4px;
+    @include transition;
+  }
+}
+
 .profile-text {
   margin: 0;
-  padding: 0 15px;
   font-size: 16px;
   line-height: 18px;
   color: $dark-color;
+  text-indent: 15px;
 
   @media (max-width: $screen-sm-min) {
     padding: 0;
@@ -534,8 +567,22 @@
 }
 
 .profile-details-row {
+
+    [class*='col-'] {
+      margin-bottom: 40px;
+    }
+
+
+  .note-text {
+    font-size: 16px;
+    line-height: 22px;
+    color: $dark-color;
+    margin: 0;
+    text-align: justify;
+  }
+
   .correct {
-    input {
+    input, select {
       border-color: $main-color;
       color: $main-color;
     }
@@ -554,24 +601,28 @@
 
   label {
     display: block;
-    font-size: 18px;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 18px;
     font-weight: 300;
+    padding-left: 15px;
+    top: -25px;
+    transform: none;
+    position: absolute;
 
     @media (max-width: $screen-sm-min) {
-      padding: 0;
+      //padding: 0;
     }
   }
 
   .profile-detail-input {
     position: relative;
-    margin-bottom: 40px;
+    //margin-bottom: 40px;
 
     label {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      left: 15px;
+      left: 0;
       @include transition;
     }
   }
@@ -591,7 +642,7 @@
 
     &:focus + label,
     &.active + label {
-      top: -23px;
+      top: -25px;
       transform: none;
       font-size: 16px;
       line-height: 18px;
@@ -604,7 +655,7 @@
     height: 44px;
     border-radius: 5px;
     border: 1px solid #9aa9b8;
-    padding: 5px 15px;
+    padding: 5px 11px;
     font-size: 18px;
     line-height: 20px;
     outline: none;
@@ -831,7 +882,7 @@
 // investment profile
 
 .dashboard-investment-row {
-  margin-bottom: 60px;
+  //margin-bottom: 50px;
 }
 
 .invest-title {
@@ -840,7 +891,7 @@
   line-height: 26px;
   color: $dark-color;
   text-transform: uppercase;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
 }
 
 .dashboard-investment-profile {
@@ -878,6 +929,14 @@
   border-radius: 5px;
   overflow: hidden;
   margin-bottom: 50px;
+
+  @media (max-width: $screen-md-min) {
+    padding: 20px 15px;
+  }
+
+  @media (max-width: $screen-sm-min) {
+    padding: 20px 0;
+  }
 }
 
 .dashboard-investment-steps {
@@ -910,10 +969,10 @@
           content: '';
           display: block;
           position: absolute;
-          top: 10px;
+          top: 8px;
           right: 48px;
           width: 200px;
-          height: 4px;
+          height: 8px;
           background-color: #ebebeb;
         }
       }
@@ -925,10 +984,10 @@
           content: '';
           display: block;
           position: absolute;
-          top: 10px;
+          top: 8px;
           left: 48px;
           width: 200px;
-          height: 4px;
+          height: 8px;
           background-color: #ebebeb;
         }
       }
@@ -960,10 +1019,10 @@
             color: $dark-color;
           }
         }
+      }
 
-        span {
-          color: $dark-color;
-        }
+      span {
+        color: $dark-color;
       }
     }
 
@@ -1004,6 +1063,34 @@
       line-height: 22px;
       color: #999;
       text-transform: uppercase;
+
+      @media (max-width: $screen-md-min) {
+        font-size: 12px;
+        line-height: 14px;
+      }
+    }
+  }
+}
+
+.hint-wrapper {
+  border-radius: 5px;
+  background-color: $dark-color;
+  padding: 20px;
+  margin-bottom: 40px;
+
+  @media (max-width: $screen-md-min) {
+    padding: 10px 15px;
+  }
+
+  p {
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 20px;
+    color: #fff;
+
+    @media (max-width: $screen-md-min) {
+      font-size: 14px;
     }
   }
 }
