--- a/scss/login.scss
+++ b/scss/login.scss
@@ -6,7 +6,11 @@
   background: #f5f5f5 url("../images/login-bg.png") no-repeat 50% 50%;
   background-size: cover;
   position: relative;
-  //padding: 1px 15px;
+  padding: 1px 15px;
+
+  &.contact-main {
+    padding: 0;
+  }
 
   &:before {
     content: '';
@@ -30,7 +34,7 @@
   position: relative;
 
   @media (max-width: $screen-sm-min) {
-    padding: 25px;
+    padding: 40px 25px;
   }
 
   .login-title {
