--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1484,14 +1484,11 @@ input[type=number]::-webkit-outer-spin-button {
     transition: all .2s linear; }
 
 .profile-text {
-  margin: 0;
+  margin: 0 0 15px 0;
   font-size: 16px;
   line-height: 18px;
   color: #203140;
   text-indent: 15px; }
-  @media (max-width: 576px) {
-    .profile-text {
-      padding: 0; } }
 
 .profile-details-row [class*='col-'] {
   margin-bottom: 40px; }
