--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -555,15 +555,11 @@
 }
 
 .profile-text {
-  margin: 0;
+  margin: 0 0 15px 0;
   font-size: 16px;
   line-height: 18px;
   color: $dark-color;
   text-indent: 15px;
-
-  @media (max-width: $screen-sm-min) {
-    padding: 0;
-  }
 }
 
 .profile-details-row {
